# UpRising-OpenCV-Detector

./: AIProfile.cs  ArenaDetection.cpp  BallDetection.cpp  BotDetection.cpp  CMakeLists.txt  DynamicObjectController.cs  GoalController.cs  MainController.cs  RobotController.cs  RobotSoccerTeamA.onnx  StreamCameraController.cs  ai_handler.cpp  ai_handler.h  arena_detector.h  ball_detector.h  bot_detector.h  camera_handler.cpp  camera_handler.h  detection_handler.cpp  detection_handler.h  draft  hsv_tuner.cpp  main.cpp  manual_robot_movementcode  mqtt_publisher.cpp  mqtt_publisher.h  rpi-camera-calib-params.json  world_state.h
